--- a/index.html
+++ b/index.html
@@ -2,13 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="style.css">
     <title>Title</title>
     <script defer src="script.js"></script>
 </head>
 <body>
 
-    <h1>Shakirov</h1>
-    <h1>Karim</h1>
 
 
 </body>
