--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
     <title>Title</title>
-    <script defer src="func.js"></script>
+    <script defer src="script.js"></script>
 </head>
 <body>
 
